<resources>
    <string name="app_name">FechaConta</string>
    <string name="inicio">Início</string>
    <string name="carteira">Carteira</string>
    <string name="pedidos">Pedidos</string>
    <string name="busca">Buscar</string>
    <string name="comanda">Comanda</string>
    <string name="perfil">Perfil</string>
    <string name="criar_conta">Criar conta</string>
    <string name="login_email">Login com email</string>
    <string name="digite_email">Digite seu email</string>
    <string name="digite_senha">Digite a senha</string>
    <string name="botao_entrar">Entrar</string>
    <string name="textRadiogroup"><b>0</b> de <b>1</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_searchlabel">Pesquisa</string>
    <string name="app_hintsearhlabel">Pesquisa</string>

    <string name="facebook_app_id">1417695415287200</string>
    <string name="fb_login_protocol_scheme">fb1417695415287200</string>



</resources>