<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8" >



            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:elevation="4dp"
                android:layout_gravity="bottom">

                <com.google.android.material.bottomappbar.BottomAppBar
                    android:id="@+id/bottom_navigation"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fabAlignmentMode="center"
                    app:fabAnimationMode="scale"
                    app:fabCradleRoundedCornerRadius="10dp"
                    app:fabCradleMargin="0dp"
                    app:itemIconTint="#000000"
                    app:itemTextColor="#000000"
                    app:elevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:drawableTop="@drawable/ic_inicio_bottom"
                            android:text="@string/inicio"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:drawableTop="@drawable/ic_carteira_bottom"
                            android:text="@string/carteira"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:drawableTop="@drawable/ic_comanda_bottom"
                            android:text="@string/pedidos"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:drawableTop="@drawable/ic_perfil_bottom"
                            android:text="@string/perfil"
                            android:textAlignment="center" />

                    </LinearLayout>


                </com.google.android.material.bottomappbar.BottomAppBar>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_device"
                    android:tint="#000000"
                    app:backgroundTint="#FF3030"
                    app:layout_anchor="@id/bottom_navigation"
                    app:elevation="4dp"
                    app:fabCustomSize="60dp"

                    />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </FrameLayout>



</LinearLayout>